src/App.css
:root {
  --mainBlue: #faf3dd;
  --lightBlue: #009ffd;
  --mainWhite: #fefdfb;
  --mainDark: #232528;
  --mainYellow: #ffa400;
  --mainGreen: #4a7c59;
  --paleGreen: #c8d5b9;
}

body {
  font-family: 'Oswald', sans-serif !important;
  background: var(--mainWhite) !important;
  color: var(--mainDark) !important;
}
/* iphone 6, 6s, 7, 8 */
@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
  .logo-container {
    order: 1 !important;
    text-align: center;
  }
  .logo-title {
    font-size: 2rem !important;
  }
  .link-container {
    order: 2 !important;
    justify-content: center;
  }
  .navbar-nav {
    display: flex;
    flex-direction: row;
    text-align: center;
  }
  .nav-item {
    margin: 0 1.5rem !important;
  }
  .home-info {
    font-size: 1.67rem !important;
  }
  .home-info-two {
    font-size: 1.1rem !important;
  }
  .button-container {
    position: absolute;
    margin-top: 1rem;
    right: 0;
    top: 0;
  }
  .cart-button {
    display: flex;
    text-align: center;
    justify-content: center;
    margin: 0 !important;
  }
  .hide-it {
    display: none !important;
  }
  .sm-fix {
    margin: 0 !important;
    padding: 0 !important;
  }
  .card-footer {
    display: flex;
    align-items: center;
    background: var(--mainBlue) !important;
  }
  .card {
    border: transparent !important;
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2) !important;
  }
  .cart-btn {
    color: var(--mainGreen);
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 0.2rem 0.4rem;
    background: var(--paleGreen);
    border: 0.05rem solid var(--paleGreen);
    font-size: 1.4rem;
    transform: translate(100%, 100%);
  }
  .cart-btn {
    transform: translate(0, 0);
    transition: all 0.4s linear;
  }
  .cart-totals {
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    text-align: right;
  }
}

/* iphone 6+, 6s+, 7+, 8+ */
@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (-webkit-device-pixel-ratio: 3) {
  .logo-container {
    order: 1 !important;
    text-align: center;
  }
  .logo-title {
    font-size: 2.3rem !important;
  }
  .link-container {
    order: 2 !important;
    justify-content: center;
  }
  .navbar-nav {
    display: flex;
    flex-direction: row;
    text-align: center;
  }
  .nav-item {
    margin: 0 1.5rem !important;
  }
  .home-info {
    font-size: 1.9rem !important;
  }
  .home-info-two {
    font-size: 1.2rem !important;
  }
  .button-container {
    position: absolute;
    margin-top: 1rem;
    right: 0;
    top: 0;
  }
  .cart-button {
    display: flex;
    text-align: center;
    justify-content: center;
    margin: 0 !important;
  }
  .hide-it {
    display: none !important;
  }
  .sm-fix {
    margin: 0 !important;
    padding: 0 !important;
  }
  .card-footer {
    display: flex;
    align-items: center;
    background: var(--mainBlue) !important;
  }
  .card {
    border: transparent !important;
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2) !important;
  }
  .cart-btn {
    color: var(--mainGreen);
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 0.2rem 0.4rem;
    background: var(--paleGreen);
    border: 0.05rem solid var(--paleGreen);
    font-size: 1.4rem;
    transform: translate(100%, 100%);
  }
  .cart-btn {
    transform: translate(0, 0);
    transition: all 0.4s linear;
  }
  .cart-totals {
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    text-align: right;
  }
}

/* iphone X , XS, 11 Pro */
@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
  .logo-container {
    order: 1 !important;
    text-align: center;
  }
  .logo-title {
    font-size: 2rem !important;
  }
  .link-container {
    order: 2 !important;
    justify-content: center;
  }
  .navbar-nav {
    display: flex;
    flex-direction: row;
    text-align: center;
  }
  .nav-item {
    margin: 0 1.5rem !important;
  }
  .home-info {
    font-size: 2rem !important;
  }
  .home-info-two {
    font-size: 1.3rem !important;
  }
  .button-container {
    position: absolute;
    margin-top: 1rem;
    right: 0;
    top: 0;
  }
  .cart-button {
    display: flex;
    text-align: center;
    justify-content: center;
    margin: 0 !important;
  }
  .hide-it {
    display: none !important;
  }
  .sm-fix {
    margin: 0 !important;
    padding: 0 !important;
  }
  .card-footer {
    display: flex;
    align-items: center;
    background: var(--mainBlue) !important;
  }
  .card {
    border: transparent !important;
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2) !important;
  }
  .cart-btn {
    color: var(--mainGreen);
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 0.2rem 0.4rem;
    background: var(--paleGreen);
    border: 0.05rem solid var(--paleGreen);
    font-size: 1.4rem;
    transform: translate(100%, 100%);
  }
  .cart-btn {
    transform: translate(0, 0);
    transition: all 0.4s linear;
  }
  .cart-totals {
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    text-align: right;
  }
}
/* ipad pro */
@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) {
  .nav-item {
    margin-left: 0.5rem !important;
  }
  .cart-button {
    margin-right: 2.2rem !important;
  }
  .home-info {
    font-size: 2.5rem !important;
  }
  .home-info-two {
    font-size: 1.5rem !important;
  }
}
/* regular ipad  */
@media only screen and (min-device-width: 768px) and (max-device-height: 1024px) {
  .nav-item {
    margin-left: 1rem !important;
  }
  .cart-button {
    margin-right: 0 !important;
  }
}
/* COMPUTERS */

@media only screen and (max-width: 1200px) and (min-width: 971px) {
  .logo-title {
    font-size: 2rem !important;
  }
  .link-container {
    justify-content: center !important;
    align-items: center !important;
  }
  .nav-item {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media only screen and (max-width: 970px) and (min-width: 861px) {
  .logo-title {
    font-size: 1.7rem !important;
  }
}

@media only screen and (max-width: 860px) {
  .nav-wrapper {
    flex-direction: column !important;
  }
  .logo-container {
    order: 1 !important;
  }

  .logo-title {
    font-size: 1.4rem !important;
  }
  .link-container {
    display: flex;
    order: 2 !important;
  }
  .navbar-nav {
    display: flex;
    flex-direction: row;
    text-align: center;
  }
  .nav-item {
    margin: 0 1.5rem !important;
  }

  .home-info {
    font-size: 1.9rem !important;
  }
  .home-info-two {
    font-size: 1.2rem !important;
  }
  .button-container {
    position: absolute;
    margin-top: 1rem;
    right: 0;
    top: 0;
  }
  .cart-button {
    display: flex;
    text-align: center;
    justify-content: center;
    margin: 0 !important;
  }

  .card-footer {
    display: flex;
    align-items: center;
    background: var(--mainBlue) !important;
  }
  .card {
    border: transparent !important;
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2) !important;
  }
  .cart-btn {
    color: var(--mainGreen);
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 0.2rem 0.4rem;
    background: var(--paleGreen);
    border: 0.05rem solid var(--paleGreen);
    font-size: 1.4rem;
    transform: translate(100%, 100%);
  }
  .cart-btn {
    transform: translate(0, 0);
    transition: all 0.4s linear;
  }
  .cart-totals {
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    text-align: right;
  }
  .hide-it {
    display: none;
  }
  .sm-fix {
    margin: 0 !important;
    padding: 0 !important;
  }
}

/* FULL SCREEN */
.nav-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.navbar-nav {
  display: flex;
}
.nav-item {
  padding-left: 2rem;
  padding-right: 2rem;
}

.link-container {
  display: flex;
  padding: 0;
  justify-content: center;
  order: 1;
}

.logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  order: 2;
}

.logo-title {
  margin: auto;
  padding: 0.2rem 0.5rem;
  cursor: pointer;
  font-family: 'Calistoga', cursive;
  display: flex;
  flex-direction: column;
  color: var(--mainGreen);
  font-size: 2.5rem;
}

.button-container {
  display: flex;
  justify-content: flex-end !important;
  order: 3;
}
.hide-it {
  display: ;
}

.text-title {
  font-family: 'Calistoga', cursive;
}

.text-green {
  color: var(--mainGreen);
}

.text-bright {
  color: var(--paleGreen);
}

.btn-cart {
  font-weight: bold;
  background: var(--paleGreen);
  text-transform: capitalize;
  font-size: 0.8rem !important;
  color: var(--mainGreen);
  border: transparent !important;
  border-radius: 0 !important;
}

.btn-cart:hover {
  color: var(--mainGreen);
  transform: none;
  transform: scale(1.01);
}
.cart-icon {
  cursor: pointer !important;
  font-size: 1.2rem;
  color: var(--mainGreen);
}

